General requirements rephrase

--- a/requirements.tex
+++ b/requirements.tex
@@ -10,9 +10,16 @@ The policy defined here will still be applicable, since many of the stakeholders
 
 \subsection{Rease General Requirements} \label{sec:genreq}
 
-In order to properly set-up the release process, all \gls{SW} products involved need to be well identified, as per definition in \citeds{DMTN-106} subsection 2.2 (see \ref{sec:defs}).
+In order to properly set-up the release process, all \gls{SW} products involved need to be clearly and unequivocally identifiable in the software repository.
+\citeds{DMTN-106} subsection 2.2 (see \ref{sec:defs}) provides a SW product definition that can be used as a starting point to identify the DM software products.
+The DM product tree availabe with \citeds{LDM-294} list the 
 
-All software releases shall be properly documented with a software release note as per definition in \citeds{DMTN-106} subsection 2.4 (see \ref{sec:defs}), and tested before making them available for operations.
+All software releases shall be properly documented with a software release note.
+\citeds{DMTN-106} subsection 3.2 (see \ref{sec:defs}) provides a definition of software release note that can be used as is or tailed depending on the needs.
+ 
+A software release should be fully tested before making it available for use.
+Test should be documented in a test reports.
+LSST System Engineering provides in Jira an integrated infrastructure that makes easy to document and execute test activities.
 
 
 \subsection{Release Requirements for the \gls{LSST} Science Community} \label{sec:comreqs}
