Corrected names, curator

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -19,7 +19,7 @@
 % \setDocSubtitle{A subtitle}
 
 \author{%
-L. Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. \gls{Butler}, M. Gelman
+L.~P.~Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. \gls{Butler}, M. Gelman
 }	
 
 \setDocRef{LDM-672}
@@ -27,7 +27,7 @@ L. Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. \gls{Butler}, M. Gelman
 \date{\today}
 
 % Optional: name of the document's curator
-\setDocCurator{Leanne Guy}
+\setDocCurator{Gabriele Comoretto}
 \setDocUpstreamLocation{\url{https://github.com/lsst/ldm-672}}
 \setDocUpstreamVersion{\vcsrevision}
 
