--- a/introduction.tex
+++ b/introduction.tex
@@ -36,9 +36,9 @@ The policy may also be applicable to other software products development by othe
 
 \subsection{Release Management Procedure} \label{sec:rmproc}
 
-The high-level \gls{Release} Management plan for \gls{DM} is documented in \citeds{LDM-294}, section 3.6. 
+The high-level Release Management plan for \gls{DM} is documented in \citeds{LDM-294}, section 3.6. 
 
 
 \subsection{Definitions} \label{sec:defs}
 
-The relevant definition to be considered when working on release policy and process are given in the draft \citeds{DMTN-106}, section 2 ( \url{https://dmtn-106.lsst.io/v/review/index.html}).
+The relevant definition to be considered when working on release policy and process are given in the draft \citeds{DMTN-106}, section 2.
