--- a/local.bib
+++ b/local.bib
@@ -1,15 +1,15 @@
-@DocuShare{DMTN-106,
+@Misc{DMTN-106,
   author = {Gabriele Comoretto},
    title = "{DM Release Process}",
     year = 2019,
-   month = apr,
   handle = {DMTN-106},
+     url = {https://dmtn-106.lsst.io/}
 }
 
-@DocuShare{DMTN-104,
+@Misc{DMTN-104,
   author = {Gabriele Comoretto},
    title = "{Data Management Detailed Product Tree}",
     year = 2019,
-   month = jan,
   handle = {DMTN-104},
+     url = {https://dmtn-104.lsst.io/}
 }
