--- a/process.tex
+++ b/process.tex
@@ -1,7 +1,7 @@
 \section{Process} \label{sec:process}
 
 
-The high-level \gls{Release} Management plan for \gls{DM} is documented in \citeds{LDM-294}, section 3.6. 
+The high-level Release Management plan for \gls{DM} is documented in \citeds{LDM-294}, section 3.6. 
 In order to avoid duplications, this process should be maintained only in one document.
 
 
@@ -15,7 +15,7 @@ The release process will be as follows:
   \item  DM-CCB will provide  a release plan identifying  milestones requiring software releases.
   \item The DM-CCB will monitor and approve or reject the content of each release. DM-CCB will ensure that  all RFCs that impact  release content are properly escalated.
 \end{itemize}
-\item Any extra releases, major, minor or \gls{patch}, has to be requested by the release end users to the DM-CCB via \gls{RFC}. The \gls{RFC} shall contain:
+\item Any extra releases, major, minor or patch, has to be requested by the release end users to the DM-CCB via \gls{RFC}. The \gls{RFC} shall contain:
 \begin{itemize}
   \item the reason for an extra release
   \item the list of features or fixes which are requested to be implemented in the release
