--- a/introduction.tex
+++ b/introduction.tex
@@ -7,7 +7,7 @@ These requirements, detailed in section \ref{sec:reqs}, are not formal project r
 \subsection{Releases Status}\label{sec:sci}
 
 Currently, only the \gls{Science Pipelines} product is released. 
-Builds and releases are made on a the following time-based cadence:
+Builds and releases are made on the following time-based cadence:
 
 \begin{itemize}
 \item Nightly builds
