Remove Asessment and draft ref to 106

--- a/introduction.tex
+++ b/introduction.tex
@@ -21,7 +21,7 @@ Consequently, by the time a release becomes available to the users, it is alread
 For this reason, users generally prefer to work with weekly builds that are sufficiently stable and include all new functionalities completed in the last week.
 
 The \gls{Science Pipelines} release checklist is documented in \citeds{SQR-016}.
-The technical note \citeds{DMTN-106}, still draft, generalize the process and summarize the technical problems that need to be solve in order that this procedur can be applied to other software products.
+The technical note \citeds{DMTN-106} generalize the process and summarize the technical problems that need to be solve in order that this procedur can be applied to other software products.
 
 
 \subsection{Policy Applicability} \label{sec:applicability}
@@ -41,4 +41,4 @@ The high-level Release Management plan for \gls{DM} is documented in \citeds{LDM
 
 \subsection{Definitions} \label{sec:defs}
 
-The relevant definition to be considered when working on release policy and process are given in the draft \citeds{DMTN-106}, section 2.
+The relevant definition to be considered when working on release policy and process are given in \citeds{DMTN-106}, section 2.
