--- a/requirements.tex
+++ b/requirements.tex
@@ -12,7 +12,7 @@ The policy defined here will still be applicable, since many of the stakeholders
 
 In order to properly set-up the release process, all \gls{SW} products involved need to be clearly and unequivocally identifiable in the software repository.
 \citeds{DMTN-106} subsection 2.2 (see \ref{sec:defs}) provides a SW product definition that can be used as a starting point to identify the DM software products.
-The DM product tree availabe with \citeds{LDM-294} list the 
+The DM product tree provided together with \citeds{LDM-294}, is available at the following link \url{https://ldm-294.lsst.io/ProductTreeLand.pdf}.
 
 All software releases shall be properly documented with a software release note.
 \citeds{DMTN-106} subsection 3.2 (see \ref{sec:defs}) provides a definition of software release note that can be used as is or tailed depending on the needs.
@@ -43,7 +43,7 @@ Software releases will be run in production at National \gls{Center} for Superco
 
 Release frequencies will depend on the processing type:
 \begin{itemize}
-\item prompt processing requires releases to be available very quick, that could happen on a daily bases, especially in the early days (official releases)
+\item Prompt Processing requires releases to be available very quick, that could happen on a daily bases, especially in the early days (official releases)
  or a  patch release  for a specific problem may be required during the night (this would require sign off from the \gls{AD} for Science \gls{Operations}).
 \item \gls{DRP} processing  must be stable for long periods, currently processing is foreseen to take 9 months.  Before such a long processing run the release must be very well tested and any updates extremely well controlled.
 \item Image acquisition and header service, which form part of the image acquisition on the mountain will also need strict change control. Releases for this could be on monthly or even lounge timescales - however if there is a problem a patch will be needed immediately.
@@ -55,7 +55,7 @@ and on the urgency of the problems to be fixed.
 
 \subsection{Release Requirements for \gls{LSST} Subsystems in \gls{Operations}.} \label{sec:otherreqs}
 
-Other \gls{LSST} subsystem may be consumers of \gls{DM} software products, for example the Telescope \& Site subsystem software makes use of the \gls{DM} software products as dependencies. 
+Other \gls{LSST} subsystem may be consumers of \gls{DM} software products, for example the Telescope \& Site subsystem software makes use of the \gls{DM} software products. 
 In order for \gls{DM} to be able to respond correctly to the needs of other \gls{LSST} subsystems, it is important to first identify which \gls{DM} software products are used, and how they are used.
 
 
@@ -77,14 +77,5 @@ large scale integration/validation test campaigns, etc. These activities should 
 In some cases however, it is necessary to use non-released software, such as release candidates or stable builds.
 In all cases, the software used must be clearly identified (Github revision at least), and the distribution/deployment strictly controlled.
 
-
-\subsection{Assessment} \label{sec:assessment}
-
-As a first glance, it seems that major releases need to be done more on a feature or milestone basis.
-
-However before concluding, further evaluation is needed.
-First of all, a unique list of requirements should be derived from the above subsections. 
-Then, it should be possible to identify which of these requirements are applicable for each software product listed in the \gls{DM} product tree, \citeds{LDM-294}.
-This extra information shall be included in MagicDraw and documented in \citeds{DMTN-104}, which is still draft.
 
 
