Added policy and 3rd party packages reqs

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -43,6 +43,7 @@ Technical implementation details for release management are covered in \citeds{D
 % Fields: VERSION, DATE, DESCRIPTION, OWNER NAME.
 % See LPM-51 for version number policy.`
 \setDocChangeRecord{%
+  \addtohist{}{2019-06-24}{Added Policy}{G.~Comoretto,J.~Swinbank}
   \addtohist{}{2019-05-09}{Added contribution from stakeholders}{G.~Comoretto on behalf of K-T Lim, M. Butler, M. Johnson}
   \addtohist{}{2019-05-07}{Updated community requirements, abstractt}{L.~Guy}
   \addtohist{}{2019-04-22}{Definitions and Requirements}{G.~Comoretto}
@@ -61,7 +62,10 @@ Technical implementation details for release management are covered in \citeds{D
 \newpage
 \input{requirements}
 
+\newpage
+\input{policy}
 
+\newpage
 \appendix
 
 % Include all the relevant bib files.
