--- a/introduction.tex
+++ b/introduction.tex
@@ -3,6 +3,10 @@
 This document presents the release policy for \gls{LSST} software based on requirements from the various stakeholders.
 These requirements, detailed in section \ref{sec:reqs}, are not formal project requirements, as given for example in the \gls{DMS} requirements specification \citeds{LSE-61}, but are nevertheless important to ensure the project's goals.
 
+Section \ref{sec:reqdef} summarizes the provided requirements. 
+Section \ref{sec:policy} provides the policies derived from the requirements.
+Finally, section \ref{sec:noncompliance} gives guidelines for the policy applicability.
+
 
 \subsection{Releases Status}\label{sec:sci}
 
