--- a/local.bib
+++ b/local.bib
@@ -13,3 +13,10 @@
   handle = {DMTN-104},
      url = {https://dmtn-104.lsst.io/}
 }
+
+@Misc{DevGuideL,
+  author = {{LSST Data Management}},
+   title = "{LSST DM Developer Guide}",
+  handle = {Developer Guide},
+     url = {https://developer.lsst.io/}
+}
