Review following Leanne's comments, added sect 6

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -13,7 +13,7 @@
 
 % To add a short-form title:
 % \title[Short title]{Title}
-\title{LSST Software Release Management Policy}
+\title{LSST Software Release Management}
 
 % Optional subtitle
 % \setDocSubtitle{A subtitle}
@@ -32,9 +32,7 @@ L.~P.~Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. Butler, M. Gelman
 \setDocUpstreamVersion{\vcsrevision}
 
 \setDocAbstract{%
-This document outlines the \gls{LSST} \gls{DM} policy for managing software product releases. 
-The policy takes into account requirements from users of \gls{DM} software products, both from within the \gls{LSST} project, and from the LSST science community. 
-Technical implementation details for release management are covered in \citeds{DMTN-106}. 
+This document outlines the management and policies for \gls{LSST} \gls{DM} software product releases.
 }
 
 
@@ -64,6 +62,9 @@ Technical implementation details for release management are covered in \citeds{D
 
 \newpage
 \input{policy}
+
+\newpage
+\input{process}
 
 \newpage
 \appendix
