--- a/introduction.tex
+++ b/introduction.tex
@@ -1,11 +1,14 @@
 \section{Introduction} \label{sec:intro}
 
-This document presents the release policy for \gls{LSST} software based on requirements from the various stakeholders.
-These requirements, detailed in section \ref{sec:reqs}, are not formal project requirements, as given for example in the \gls{DMS} requirements specification \citeds{LSE-61}, but are nevertheless important to ensure the project's goals.
+This document prests the release manafgement approach for \gls{LSST} \gls{DM} software products.
 
-Section \ref{sec:reqdef} summarizes the provided requirements. 
-Section \ref{sec:policy} provides the policies derived from the requirements.
-Finally, section \ref{sec:noncompliance} gives guidelines for the policy applicability.
+First of all, in section \ref{sec:reqs}, the release requirements for the varius  stakeholders are identified.
+The release requirements are then consolideated in section \ref{sec:reqdef}.
+These requirements are not formal project requirements, as given for example in the \gls{DMS} requirements specification \citeds{LSE-61}, but are nevertheless important to ensure the project's goals.
+
+Based on the consolidated reqirements, a set of policies are derived in section \ref{sec:policy} and guidelines on their applicability is provided in section \ref{sec:noncompliance}.
+
+Finally section \ref{sec:process} goves a high level overview of the release process.
 
 
 \subsection{Releases Status}\label{sec:sci}
@@ -37,10 +40,7 @@ The approved product tree is available online at\url{https://ldm-294.lsst.io/Pro
 
 The policy may also be applicable to other software products development by other \gls{LSST} subsystems.
 
-
-\subsection{Release Management Procedure} \label{sec:rmproc}
-
-The high-level Release Management plan for \gls{DM} is documented in \citeds{LDM-294}, section 3.6. 
+In case 
 
 
 \subsection{Definitions} \label{sec:defs}
