--- a/requirements.tex
+++ b/requirements.tex
@@ -1,11 +1,32 @@
 \section{Stakeholders Requirements} \label{sec:reqs}
 
-This section gives an overview of requirements on \gls{DM} software product releases from the different stakeholders.
+This section try to address the question: 
 
-It is important to identify the expected release requirements and the corresponding policy during the construction phase, in order to have it consolidated when operations start.
+\textbf{Why DM software releases are needed?}
+
+and therefore, tries to identify who is requesting them: the stakeholders.
+
+The following subsections summarize the release requirements on \gls{DM} software products from the different stakeholders' point of view.
+
+It is important to identify these requirements and the corresponding policies during the construction phase, in order to have them consolidated when operations start.
 
 In operations, some of the \gls{LSST} subsystems may no longer exist, for example, \gls{DM} will not exist per se but \gls{DM} software products will still exist under other managerial structure.
-The policy defined here will still be applicable since many of the stakeholders will still expect software releases to be managed in the same manner as during construction.
+The requirements and policies defined here will still be applicable since many of the stakeholders will still expect software releases to be managed following the process consolidated during construction.
+
+
+\subsection{Release Requirements for the \gls{LSST} Project} \label{sec:comreqs}
+
+The main reason for DM to do software releases is to fulfill the project outcome: provide the Data Products.
+
+In order to do that, software releases shall:
+
+\begin{itemize}
+\item be available on a time base cadence (every 6 months) during the construction phase,
+\item be available when required by a project milestone, in order to be used for the proper validation (commissioning) and operations activities,
+\item implement the corresponding functionalities,
+\item include third-party software from the Science Community when this is beneficial to the project outcome,
+\item source code license shall be appropriate in order to permit contribution from the Science Community.
+\end{itemize}
 
 
 \subsection{Release Requirements for the \gls{LSST} Science Community} \label{sec:comreqs}
@@ -14,6 +35,7 @@ In preparation for working with the \gls{LSST} data products and software during
 
 In order to work effectively with the \gls{DM} software while it is still under development, the science community require: 
 \begin{itemize}
+\item timely access new functionality
 \item stable public APIs and schemas in order to build software for User-Generated analyses, 
 \item patches and bug fixes back-ported to the current stable version of the software,
 \item include software provided by external contributors in a software release or distribution (due to the collaborative nature of the project).
@@ -121,42 +143,42 @@ Additional releases can be requested to the DM-CCB using the RFC mechanism.
 It shall be possible to backport a fix on a stable release and provide a patch release including only the backported fix.
 
 
-\subsection{Third Part Software Inclusion Requirement} \label{sec:thirdsw}
+\subsection{Third-Party Software Inclusion Requirement} \label{sec:thirdsw}
 
-It shall be possible to include in a software product release or distribution release, a software package provided by a third party contributor.
-
-Reasons to include third-party code in DM software or distributions are:
-\begin{enumerate}
-\item There are packages to  use in DM code\footnote{E.g. starlink\_ast}.  \label{item:depend}
-\item There are packages to use when working with the deployed software\footnote{Pandas  might be such an example}, - they are not needed it to build or run DM code but they may provide extra functionalities for interaction with the data.\label{item:want}
-\item Collaborator's packages for data processing or postprocessing\footnote{that depend on DM code or provide algorithm DM may want to use, like for example ngmix}. This is what most people on LSST are thinking about under the topic of third party software. \label{item:colab}
-\end{enumerate}
+It shall be possible to include in a software product release or distribution release, a software package provided by a third-party contributor.
 
 
-\subsection{Stable public APIs and schemas} \label{sec:stable}
+\subsection{Stable public APIs and Schemas Requirement} \label{sec:stable}
 
 Public APIs and schemas shall be stable and follow a well-defined deprecation mechanism in order to give time to the stakeholder to adapt to the new API.
+
+
+\subsection{License Requirement} \label{sec:license}
+
+DM software shall be released with an appropriate license, that permits to use and redistribution of software provided by external collaborators.
 
 
 \subsection{Requirements Summary Overview} \label{sec:overview}
 
 The following table gives an overview of the release requirements applicable for each stakeholder.
 
-\setlength\LTleft{-0.35in}
+\setlength\LTleft{-0.4in}
 \setlength\LTright{-0.5in}
-\begin{longtable}{p{2.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.5cm}p{1.7cm}p{1.5cm}}\hline
+\begin{longtable}{p{2.4cm}p{1.2cm}p{1.4cm}p{1.4cm}p{1.3cm}p{1.3cm}p{1.3cm}p{1.7cm}p{1.3cm}p{1.3cm}}\hline
 & 
-SW Ident.            & Release Doc.                  & Release Test & Funct. Based           & Time Based & Patch & 3rd Party SW  & Stable API  \\ \hline
+SW Ident.            & Release Doc.                  & Release Test & Funct. Based           & Time Based & Patch & 3rd Party SW  & Stable API  & Policy \\ \hline
+LSST Project &
+YES                     & YES                                & YES               &  YES                        &  YES            & YES.   & YES               &  YES.          & YES   \\ \hline
 Science Community &
-YES                     & YES                                &                       &                                 &  YES            & YES.   & YES               &  YES.          \\ \hline
+YES                     & YES                                &                       &                                 &  YES            & YES.   & YES               &  YES.          & YES   \\ \hline
 DM Operations &
-YES                     & YES                                & YES               & YES                         &                     & YES.   & YES               &  YES(?)      \\ \hline
+YES                     & YES                                & YES               & YES                         &                     & YES.   & YES               &  YES(?)      &            \\ \hline
 Other Operations &
-YES                     & YES                                & YES               & YES                         &                     & YES.   &                       &  YES(?)      \\ \hline
+YES                     & YES                                & YES               & YES                         &                     & YES.   &                       &  YES(?)      &            \\ \hline
 Infrastructure &
-YES                     & YES                                & YES               &                                 &  YES            & YES.   &                       &  YES           \\ \hline
+YES                     & YES                                & YES               &                                 &  YES            & YES.   &                       &  YES           &            \\ \hline
 Non Operations &
-YES                     & YES(?)                            & YES(?)          & YES                         &  YES            & YES.   & YES               &  YES          \\ \hline
+YES                     & YES(?)                            & YES(?)          & YES                         &  YES            & YES.   & YES               &  YES          &            \\ \hline
 \hline
 \end{longtable}
 \setlength\LTleft{0in}
